--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Gravity</string>
+    <string name="txt_mainMenu_nameGame">JetDan Joyride</string>
+    <string name="txt_mainMenu_newGame">New game</string>
+    <string name="txt_mainMenu_settings">Settings</string>
+    <string name="txt_mainMenu_leaders">Leaders</string>
+    <string name="txt_mainMenu_exitGame">Exit</string>
 </resources>
